--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,14 @@ position-y to fix the image at a different location of the large image. */
 body {
     background-image: url("/images/janko-ferlic-sfL_QOnmy00-unsplash.jpg");
     background-position-y: 22%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    height: 100%;
+    overflow: hidden;
     background-size: 120%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 15rem);
     margin: 0;
     padding: 0;
 }
@@ -17,12 +24,21 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.bookImage {
+    position: absolute;
+    right: 185px;
+    grid-column: 2;
+    grid-row: 1/4;
+    width: 1200px;
+    filter: drop-shadow(0 0 15px black);
+    z-index: -1;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
     box-shadow: 0px -25px 35px 20px #5d6684;
     opacity: 90%;
     height: 35px;
