--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,10 +9,50 @@ body {
     overflow: hidden;
     background-size: 120%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 15rem);
     margin: 0;
     padding: 0;
+}
+
+@font-face {
+    font-family: writtenText;
+    src: url(CAVOLINI.TTF);
+}
+
+/* input styling to allow the text to look  like it was being wrritten into the book. */
+input {
+    font-size: 30px;
+    font-family: writtenText;
+    width: 450px;
+    height: minMax(40px, 80px);
+    flex-wrap: wrap;
+    border: none;
+    border-radius: 10px;
+    background-color:#5d668400;
+}
+
+input:focus {
+    border: none;
+}
+
+table {
+    border-spacing: 40px 35px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+td {
+    position: relative;
+    padding-top: 50px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bookContainerSize {
+    grid-column: 2 / 5;
+    grid-row: 1/4;
+    z-index: 1;
 }
 
 .imageCredit {
@@ -31,7 +71,6 @@ body {
     grid-row: 1/4;
     width: 1200px;
     filter: drop-shadow(0 0 15px black);
-    z-index: -1;
 }
 
 .footer {
