--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,10 @@ table {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+th {
+    font-size: 24px;
+}
+
 td {
     position: relative;
     padding-top: 50px;
@@ -49,11 +53,86 @@ td {
     flex-direction: column;
 }
 
+/* upon hover, scale the item down to 0. TODO:: Have all items start at scale 0. 
+When button is pressed, perform transition to transform:scale(1) */
+/* .hide-item:hover {
+    transform:scale(0);
+    transition-duration: 3s;
+    transition-delay: 2s;
+} */
+
+/* Positining for the add a book button. */
+.bookButtonContainer {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    justify-self: center;
+    align-self: end;
+}
+
+/* Styling for book button, along with transition animation to hover off the button. */
+.addBookButton {
+    animation: loadIn 2s;
+    text-align: center;
+    text-justify: center;
+    height: 75px;
+    width: 300px;
+    color: white;
+    background-color: rgb(48, 168, 216);
+    border-radius: 15px;
+    border: 1px solid #EAB599;
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+    transition-duration:.3s;
+}
+
+/* keyframe to scale up book button add after page load. */
+@keyframes loadIn {
+    0% {
+        transform:scale(0);
+    }
+    25% {
+        transform:scale(0);
+    }
+    100% {
+        transform:scale(1);
+    }
+}
+
+/* Hover state button changes. */
+.addBookButton:hover {
+    font-size: 36px;
+    transition-duration:.3s;
+    width: 340px;
+    height: 85px;
+    text-shadow:2px 2px #5d6684;
+    box-shadow: 0px 5px 5px 5px #5d6684;
+}
+
+/* button clickdown transformation. */
+.addBookButton:active {
+    transform: translate(-4px, 4px);
+    transition-duration: 0.08s;
+    box-shadow: 2px 5px 5px 2px #5d6684;
+}
+
 .bookContainerSize {
     grid-column: 2 / 5;
     grid-row: 1/4;
     z-index: 1;
 }
+
+
+.hide-item {
+    transform:scale(0);
+}
+
+
+
+/* .bookContainerSize:hover {
+    transform:scale(0);
+    transition-duration: 3s;
+} */
 
 .imageCredit {
     grid-column: 4 / 5;
