--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,7 @@
 position-y to fix the image at a different location of the large image. */
 /* body styles transition in over 5s, making the website look like we're looking through the library. */
 body {
-    transition-duration: 5s;
-    animation: background-fadeIn 2s;
+    animation: fadeIn 5s;
     background-image: url("../images/janko-ferlic-sfL_QOnmy00-unsplash.jpg");
     background-position-y: 22%;
     background-repeat: no-repeat;
@@ -18,13 +17,15 @@ body {
     padding: 0;
 }
 
-@keyframes background-fadeIn {
-    0% {
-        opacity: 0%;
+@keyframes fadeIn {
+    0%  {
+        background-position-y: 0%;
     }
     100% {
-        opacity: 100%;
+        opacity: 1;
+        background-position-y: 22%;
     }
+    
 }
 
 @font-face {
