--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 /* Added  background image of library, warm and inviting, used 
 position-y to fix the image at a different location of the large image. */
-/* body styles transition in over 5s, making the website look like we're looking through the library. */
+/* animation fadeIn looks through library */
 body {
     animation: fadeIn 5s;
     background-image: url("../images/janko-ferlic-sfL_QOnmy00-unsplash.jpg");
@@ -17,13 +17,14 @@ body {
     padding: 0;
 }
 
+/* animation fadeIn looks through library */
 @keyframes fadeIn {
     0%  {
         background-position-y: 0%;
     }
     100% {
-        opacity: 1;
         background-position-y: 22%;
+        opacity: 0.5s ease-in;
     }
     
 }
