--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ body {
     opacity: 1;
 }
 
-/* animation fadeIn looks through library */
+/* animation looks through library and fades in background items. */
 @keyframes searchLibrary {
     0%  {
         opacity: 0;
@@ -86,7 +86,7 @@ When button is pressed, perform transition to transform:scale(1) */
 
 /* Styling for book button, along with transition animation to hover off the button. */
 .addBookButton {
-    animation: loadIn 4.8s;
+    animation: loadIn 4.6s;
     text-align: center;
     text-justify: center;
     height: 75px;
@@ -101,7 +101,7 @@ When button is pressed, perform transition to transform:scale(1) */
     transition-duration:.3s;
 }
 
-/* keyframe to scale up book button add after page load. */
+/* keyframe to scale up book button add after page load. Scattered times to bring it in as the image is scrolling. */
 @keyframes loadIn {
     0% {
         transform:scale(0);
@@ -128,7 +128,7 @@ When button is pressed, perform transition to transform:scale(1) */
 .addBookButton:active {
     transform: translate(-4px, 4px);
     transition-duration: 0.08s;
-    box-shadow: 2px 5px 5px 2px #5d6684;
+    box-shadow: 2px 2px 2px 2px #5d6684;
 }
 
 .bookContainerSize {
