--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,9 +35,8 @@ body {
     } 
 }
 
-/* MAKE ANOTHER BRANCH BEFORE DOING ANY MORE WORK TODAY.... */
-
-/* input styling to allow the text to look  like it was being wrritten into the book. */
+/* input styling to allow the text to look like it was being wrritten into the book. */
+/* text-area */
 input {
     font-size: 30px;
     font-family: writtenText;
@@ -48,20 +47,14 @@ input {
     border-radius: 10px;
     background-color:#5d668400;
 }
-
-input:focus {
-    border: none;
-}
-
+/* form table styling */
 table {
     border-spacing: 40px 35px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 th {
     font-size: 24px;
 }
-
 td {
     position: relative;
     padding-top: 50px;
@@ -70,15 +63,7 @@ td {
     flex-direction: column;
 }
 
-/* upon hover, scale the item down to 0. TODO:: Have all items start at scale 0. 
-When button is pressed, perform transition to transform:scale(1) */
-/* .hide-item:hover {
-    transform:scale(0);
-    transition-duration: 3s;
-    transition-delay: 2s;
-} */
-
-/* Positining for the add a book button. */
+/* Positioning for add a book button */
 .bookButtonContainer {
     z-index: 2;
     grid-column: 3/4;
@@ -87,26 +72,9 @@ When button is pressed, perform transition to transform:scale(1) */
     align-self: end;
 }
 
-.myClass {
-    transition-duration: 3s;
-    opacity: 0;
-}
-
-/* Fades out the button after clicking it (Doesn't work well yet TODO::) */
-@keyframes fadeOut {
-    0%{
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-    
-}
-
 /* Styling for book button, along with transition animation to hover off the button. */
 .addBookButton {
-    animation: loadIn 4.6s;
+    animation: loadIn 4.8s;
     text-align: center;
     text-justify: center;
     height: 75px;
@@ -151,6 +119,7 @@ When button is pressed, perform transition to transform:scale(1) */
     box-shadow: 2px 2px 2px 2px #5d6684;
 }
 
+/* Container that holds the table form text positioning. */
 #bookContainerSize {
     grid-column: 2 / 5;
     grid-row: 1/4;
@@ -160,10 +129,12 @@ When button is pressed, perform transition to transform:scale(1) */
     transition: 2s ease;
 }
 
+/* Class used to hide bookContainerSize, table and bookImage */
 .hide-item {
     transform:scale(0);
 }
 
+/* Credit for the background image used. */
 .imageCredit {
     grid-column: 4 / 5;
     justify-self: end;
@@ -173,6 +144,7 @@ When button is pressed, perform transition to transform:scale(1) */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* Image of book positioning. */
 #bookImage {
     position: relative;
     top: 50px;
@@ -196,6 +168,12 @@ When button is pressed, perform transition to transform:scale(1) */
     width: 100vw;
     background-color: #5d6684;
     font-size: 72px;
+}
+
+/* Class for allowing fading in of book image */
+.myClass {
+    transition-duration: 3s;
+    opacity: 0;
 }
 /* Animation ideas. 
 First: GITHUB Logo in my footer centered, with some type of animation of the cat, maybe spinning around, or winking?
