--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,6 +129,22 @@ td {
     transition: 2s ease;
 }
 
+.submitBook {
+    height: 40px;
+    color: white;
+    background-color: #9E6958;
+    border-radius: 10px;
+}
+
+.submitBook:hover {
+    text-shadow:2px 2px #5d6684;
+    box-shadow: 0px 2px 2px 1px #5d6684;
+}
+
+.submitBook:active {
+    box-shadow: 1px 1px 1px 1px #5d6684;
+}
+
 /* Class used to hide bookContainerSize, table and bookImage */
 .hide-item {
     transform:scale(0);
@@ -144,7 +160,7 @@ td {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* Image of book positioning. */
+/* Book image positioning. */
 #bookImage {
     position: relative;
     top: 50px;
